--- a/style.css
+++ b/style.css
@@ -12,13 +12,25 @@ body {
 img {
   max-width: 100%;
 }
-.container {
-  width: 90%;
-  margin: 0 auto;
-  position: relative;
-}
 header {
-    background: #005fa3;
-    text-align: center;
-    padding: 1em 0;
+  background: #005fa3;
+  text-align: center;
+  padding: 1rem 0;
+}
+.container {
+  border: 2px solid yellow;
+  width: 90%;
+  max-width:1200px;
+  margin: 0 auto;
+  /* position: relative; */
+}
+.row {
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+}
+.header__name {
+  color: white;
+  font-size: 1.5rem;
+  font-weight: 700;
 }
