--- a/style.css
+++ b/style.css
@@ -34,3 +34,19 @@ header {
   font-size: 1.5rem;
   font-weight: 700;
 }
+.nav__list {
+  border: 2px solid red;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  /* position: absolute; */
+  top: 100%;
+  right: 0;
+  width: 100%;
+  max-width: 250px;
+  /* display: none; */
+  /* flex-direction: column; */
+  transform-origin: top;
+  transition: transform 0.3s ease-in-out;
+
+}
