--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ img {
 }
 header {
   background: #005fa3;
+  /* color: white; */
+  position: sticky;
+  top: 0;
+  z-index: 1000;
   text-align: center;
   padding: 1rem 0;
 }
