--- a/style.css
+++ b/style.css
@@ -75,3 +75,9 @@ header {
   padding: 1.25rem;
   transition: background 0.3s, color 0.3s;
 }
+.nav__link:hover,
+.nav__link:focus {
+  /* background-color: #e4b363; */
+        /* color: #464655; */
+  opacity: 0.75;
+}
