--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ img {
 }
 header {
   background: #005fa3;
-  /* color: white; */
+  color: white;
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -26,7 +26,6 @@ header {
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
-  /* position: relative; */
 }
 .row {
   display: flex;
@@ -34,7 +33,6 @@ header {
   align-items: center;
 }
 .header__name {
-  color: white;
   font-size: 1.5rem;
   font-weight: 700;
 }
@@ -49,10 +47,8 @@ header {
   text-decoration: none;
   color: inherit;
   display: block;
-  background: #0077cc;
-  color: white;
-  padding: 1.25rem;
-  /* transition: background 0.3s, color 0.3s; */
+  background: #005fa3;
+  padding: 1.25rem 0;
   font-size: 1.125rem;
 }
 .nav__list {
@@ -82,5 +78,42 @@ header {
   /* background-color: #e4b363; */
   /* color: #464655; */
   opacity: 0.75;
+  font-weight: 700;
   /* color: ; */
+}
+
+/* Desktop view */
+@media (min-width: 800px) {
+  .container {
+    /* border: 2px solid yellow; */
+    width: 80%;
+  }
+  .row {
+    gap: 1rem;
+    align-items: center;
+  }
+  .nav-toggle {
+    display: none;
+  }
+  .nav__list {
+    position: static;
+    display: flex;
+    flex-direction: row;
+    max-width: none;
+    width: auto;
+    gap: 2rem;
+  }
+  .nav__link {
+    padding: 0;
+    margin: 0;
+
+    /* border: 2px solid red; */
+  }
+  .nav__item + .nav__item {
+    margin: 0;
+  }
+  .nav__link:hover,
+  .nav__link:focus {
+    font-weight: normal;
+  }
 }
