--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* Base Styles (Mobile first) */
+/* header section */
 *,
 *::after,
 *::before {
@@ -7,7 +8,9 @@
   padding: 0;
 }
 body {
-
+  /* font-family: "Playfair Display", serif; */
+  font-family: "Roboto", sans-serif;
+  /* font-weight: ; */
 }
 img {
   max-width: 100%;
@@ -79,9 +82,48 @@ header {
   /* color: #464655; */
   opacity: 0.75;
   font-weight: 700;
-  /* color: ; */
 }
-
+/* hero section */
+.hero {
+  position: relative;
+  overflow: hidden;
+  border: 2px solid blueviolet;
+}
+.background-shape {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 20%;
+  clip-path: polygon(0 0, 100% 0, 100% 59%, 0% 100%);
+  background: #00b4d2;
+  z-index: 0;
+}
+.hero__image--content {
+  position: relative;
+  z-index: 1;
+  width: 85%;
+  margin: 0 auto;
+}
+.hero__image {
+  border-radius: 12px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  margin-top: 1rem;
+}
+.hero__title {
+  font-family: "Playfair Display", serif;
+  /* font-size: 2rem; */
+  font-weight: 900;
+  /* line-height: 2; */
+  color: white;
+  position: absolute;
+  z-index: 2;
+  bottom: 2%;
+  right: 2%;
+}
+.hero__title span {
+  display: block;
+}
 /* Desktop view */
 @media (min-width: 800px) {
   .container {
