--- a/style.css
+++ b/style.css
@@ -143,6 +143,15 @@ header {
   /* justify-content: center; */
   /* align-items: center; */
 }
+/* Skills section */
+.section__title {
+  font-family: "Playfair Display", serif;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 4rem;
+}
+
+
 /* Desktop view */
 @media (min-width: 800px) {
   .container {
