Add margin top between skills items to skills section in style.css

--- a/style.css
+++ b/style.css
@@ -214,6 +214,9 @@ header {
   /* justify-content: center; */
   align-items: center;
 }
+.skills__items + .skills__items {
+  margin-top: 1rem;
+}
 .skills__items__icon {
   width: 2rem;
 }
