Add font size to project description, tech stack of project section in style.css

--- a/style.css
+++ b/style.css
@@ -277,8 +277,10 @@ header {
 .project__description {
   width: 80%;
   margin: 0 auto;
+  font-size: 0.87rem;
 }
 .tech {
+  font-size: 0.55rem;
   color: red;
   /* margin-left: 1rem; */
 }
