Set width to the tech stack as same as project name and icons in style.css

--- a/style.css
+++ b/style.css
@@ -281,7 +281,10 @@ header {
 }
 .tech {
   font-size: 0.55rem;
-  color: red;
+  width: 70%;
+  margin: 0 auto;
+  background: red;
+  /* color: red; */
   /* margin-left: 1rem; */
 }
 .tech span {
