--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ header {
 }
 /* Projects section */
 .project__name {
-   font-family: "Playfair Display", serif;
+  font-family: "Playfair Display", serif;
 }
 .project__card--wrapper {
   border: 2px solid blue;
@@ -248,7 +248,7 @@ header {
 }
 .project-image {
   width: 100%;
-  height: 300px;    /*       */
+  height: 300px; /*       */
   overflow: hidden;
 }
 
@@ -258,7 +258,6 @@ header {
   height: 100%;
   object-fit: cover;
   display: block;
-  
 }
 .project__name_and_icons {
   border: 2px solid red;
@@ -287,9 +286,15 @@ header {
   /* color: red; */
   /* margin-left: 1rem; */
 }
-.tech span:not(:first-of-type){
-    margin-left: 1rem;
-    background: red;
+.tech span {
+  background: #00b4d2;
+  color: white;
+  padding: 0.25rem 0.5rem;
+  border-radius: 100px;
+}
+.tech span:not(:first-of-type) {
+  margin-left: 1rem;
+  /* background: red; */
 }
 /* Desktop view */
 @media (min-width: 800px) {
