Add padding top bottom of project name in style.css

--- a/style.css
+++ b/style.css
@@ -266,6 +266,7 @@ header {
   justify-content: space-between;
   width: 70%;
   margin: 0 auto;
+  padding: 1rem 0;
 }
 .project__icons {
   width: 1.5rem;
