--- a/style.css
+++ b/style.css
@@ -283,6 +283,7 @@ header {
   font-size: 0.55rem;
   width: 70%;
   margin: 0 auto;
+  padding: 1rem 0;
   /* background: red; */
   /* color: red; */
   /* margin-left: 1rem; */
