Add styles to testimonials section in style.css

--- a/style.css
+++ b/style.css
@@ -306,6 +306,26 @@ header {
   /* margin-left: 1rem; */
   /* background: red; */
 }
+.testimonials--content {
+
+}
+.testimonials--content p {
+  border: 2px solid red;
+  /* margin-bottom: 2rem; */
+}
+.testimonials--content .quote {
+  border: 2px solid red;
+  margin-top: 3rem;
+  /* color: red; */
+  font-style: italic;
+  /* background: blueviolet; */
+}
+.quote--speaker {
+  font-weight: 900;
+  font-style: normal;
+  margin-top: 1rem;
+  text-align: end;
+}
 /* Desktop view */
 @media (min-width: 800px) {
   .container {
