Update testimonials content top, bottom padding in style.css

--- a/style.css
+++ b/style.css
@@ -310,6 +310,7 @@ header {
 .testimonials--content {
   transform: rotateZ(0deg);
   box-shadow: 2px 5px 5px 2px;
+  padding: 2rem 0;
 }
 .testimonials--content:hover {
   /* object-fit: cover; */
