--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  height: 20%;
+  height: 60%;
   clip-path: polygon(0 0, 100% 0, 100% 59%, 0% 100%);
   background: #00b4d2;
   z-index: 0;
@@ -125,6 +125,7 @@ header {
   display: block;
 }
 .about_me--heading {
+  font-size: 2.5rem;
   font-family: "Playfair Display", serif;
   font-weight: 700;
   text-align: center;
@@ -151,6 +152,7 @@ header {
   margin-top: 5rem;
 }
 .section__title {
+  font-size: 2.5rem;
   font-family: "Playfair Display", serif;
   font-weight: 700;
   text-align: center;
