Testing code to contact image display in style.css

--- a/style.css
+++ b/style.css
@@ -415,7 +415,7 @@ header {
   /* text-align: center; */
 }
 .contact-image-inside-container {
-  display: none;
+  /* display: none; */
   /* margin: 0; */
   /* padding: 0; */
 }
