--- a/style.css
+++ b/style.css
@@ -309,6 +309,33 @@ header {
   /* background: red; */
 }
 /* Testimonials */
+/* Testimonials, resume background-image */
+.testimonials,
+.resume {
+  position: relative;
+  z-index: 1;
+}
+.testimonials--content,
+.resume--content {
+  position: relative;
+  z-index: 2;
+}
+.background-image {
+  background-image: url("./assets/images/Fallen_angel_art-work_xymkkg_c_scale\,w_715.jpg");
+  position: absolute;
+  width: 100%;
+  height: 900px;
+  top: 15%;
+  left: 0%;
+  z-index: 0;
+  transform: translateY(-25%);
+  background-size: cover;
+  background-position: center;
+  opacity: 0.15;
+  pointer-events: none;
+}
+
+/*  */
 .testimonials--content {
   transform: rotateZ(0deg);
   box-shadow: 2px 5px 5px 2px;
