Add css to projects section's github, open-in-new icons  in style.css

--- a/style.css
+++ b/style.css
@@ -282,10 +282,16 @@ header {
   padding: 1rem 0;
 }
 .project__icons {
-  width: 1.7rem;
+  
   display: flex;
   gap: 1rem;
-  /* border: 2px solid green; */
+  border: 2px solid red;
+}
+.project__icons a {
+  width: 1.7rem;
+  border: 2px solid green;
+  /* margin: 0; */
+  /* padding: 0; */
 }
 .project__description {
   width: 80%;
