--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
   margin: 0;
   padding: 0;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   /* font-family: "Playfair Display", serif; */
   font-family: "Roboto", sans-serif;
