--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  height: 40%;
+  height: 30%;
   clip-path: polygon(0 0, 100% 0, 100% 59%, 0% 100%);
   background: #00b4d2;
   z-index: 0;
@@ -475,6 +475,14 @@ header {
 }
 
 .about_me__icons {
+}
+/* Tablet view */
+@media (min-width:500px) {
+
+}
+
+@media (min-width:768px) {
+
 }
 /* Desktop view */
 @media (min-width: 800px) {
