Add grid columns auto-fit to 'skills card wrapper' in style.css

--- a/style.css
+++ b/style.css
@@ -555,6 +555,12 @@ header {
   .nav__link:focus {
     font-weight: normal;
   }
+  /* Skills section */
+  .skills__card--wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+  /* Projects section */
   .project__card--wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
