Add margin-top to zero at skills card in style.css

--- a/style.css
+++ b/style.css
@@ -560,6 +560,9 @@ header {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
+  .skills__card + .skills__card {
+    margin-top: 0;
+  }
   /* Projects section */
   .project__card--wrapper {
     display: grid;
