--- a/style.css
+++ b/style.css
@@ -478,7 +478,8 @@ header {
 .about_me__icons {
 }
 /* Tablet view */
-@media (min-width: 500px) {
+/* and (max-width: 768px) */
+@media (min-width: 500px) and (max-width: 768px) {
   .background-shape {
     height: 60%;
     /* clip-path: polygon(0 0, 100% 0, 100% 59%, 0% 100%); */
@@ -519,6 +520,33 @@ header {
   .about_me__icons {
     display: none;
   }
+  /* Skills section */
+  .skills__card {
+    /* padding: 0; */
+    /* margin: 0; */
+  }
+  .skills__card--wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    /* padding: 0; */
+    /* margin: 0; */
+    gap: 2rem;
+  }
+  .skills__card + .skills__card {
+    margin-top: 0;
+  }
+  /* Projects section */
+  .project__card--wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 2rem;
+  }
+  .project__card + .project__card {
+    margin-top: 0;
+  }
+  .project__name_and_icons {
+    width: 80%;
+  }
 }
 
 /* Desktop view */
@@ -554,25 +582,5 @@ header {
   .nav__link:hover,
   .nav__link:focus {
     font-weight: normal;
-  }
-  /* Skills section */
-  .skills__card--wrapper {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  }
-  .skills__card + .skills__card {
-    margin-top: 0;
-  }
-  /* Projects section */
-  .project__card--wrapper {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 2rem;
-  }
-  .project__card + .project__card {
-    margin-top: 0;
-  }
-  .project__name_and_icons {
-    width: 80%;
   }
 }
