Add css to min-width: 1200px at contact for better UX in style.css

--- a/style.css
+++ b/style.css
@@ -610,3 +610,14 @@ header {
     font-weight: normal;
   }
 }
+@media (min-width: 1200px) {
+  .contact__info {
+    align-self: flex-start;
+    /* margin: 0; */
+    /* padding: 0; */
+    /* justify-self: flex-start; */
+  }
+  .contact__info h2 {
+    /* margin-bottom: 2rem; */
+  }
+}
