--- a/style.css
+++ b/style.css
@@ -609,7 +609,26 @@ header {
   .nav__link:focus {
     font-weight: normal;
   }
-  
+  /* Hero section */
+  .background-shape {
+    height: 70%;
+  }
+  .hero__row--wrapper {
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+    /* gap: 1rem; */
+    position: relative;
+    margin-top: 2rem;
+  }
+  .about_me--content {
+    background: white;
+    padding: 0 2rem 2rem 2rem;
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+  }
+  .about_me__icons {
+    justify-content: right;
+  }
 }
 @media (min-width: 1200px) {
   .contact__info {
