--- a/style.css
+++ b/style.css
@@ -626,8 +626,20 @@ header {
     padding: 0 2rem 2rem 2rem;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
   }
+  .hero__image {
+    /* border-radius: 0; */
+  }
   .about_me__icons {
     justify-content: right;
+  }
+  .hero__title span {
+    /* display: inline-block; */
+  }
+
+  .hero__title {
+    /* right: 12%; */
+    /* font-size: 3rem; */
+    display: none;
   }
 }
 @media (min-width: 1200px) {
