--- a/style.css
+++ b/style.css
@@ -485,7 +485,7 @@ header {
 
 /* Tablet view */
 /* and (max-width: 768px) */
-@media (min-width: 500px) and (max-width: 768px)  {
+@media (min-width: 500px) and (max-width: 768px) {
   .background-shape {
     height: 60%;
     /* clip-path: polygon(0 0, 100% 0, 100% 59%, 0% 100%); */
@@ -520,6 +520,9 @@ header {
     z-index: 2;
     right: 5%;
   } */
+  .hero__title {
+    display: none;
+  }
   .about_me__icons {
     display: none;
   }
@@ -550,7 +553,6 @@ header {
   .project__name_and_icons {
     width: 85%;
   }
-
 }
 @media (min-width: 700px) {
   /* Contact section */
