Add box-shadow to resume section for mobile view in style.css

--- a/style.css
+++ b/style.css
@@ -386,7 +386,7 @@ header {
 .resume--content {
   padding: 2rem 0;
   /* transform: scale(1.2) rotateZ(11deg); */
-  /* box-shadow: 2px 5px 5px 2px; */
+  box-shadow: 2px 5px 5px 2px;
 }
 
 .resume--description {
