--- a/style.css
+++ b/style.css
@@ -342,6 +342,13 @@ header {
 .resume--content {
   position: relative;
   z-index: 2;
+  padding: 0 2rem;
+  /* width: 70%; */
+}
+.testimonials__text--wrapper,
+.resume__text--wrapper {
+  width: 80%;
+  margin: auto;
 }
 .background-image {
   background-image: url("./assets/images/Fallen_angel_art-work_xymkkg_c_scale\,w_715.jpg");
