--- a/style.css
+++ b/style.css
@@ -493,7 +493,8 @@ header {
     float: left;
     position: relative;
     z-index: 1;
-    margin: 1rem 1rem 0 0;
+    margin-right: 1rem;
+    /* margin: 1rem 1rem 0 0; */
     /* border: 2px solid red; */
   }
   .about_me--content {
@@ -501,6 +502,7 @@ header {
     z-index: 0;
     background: white;
     margin-top: 1rem;
+    padding: 1rem;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     /* box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1); */
   }
