--- a/style.css
+++ b/style.css
@@ -484,7 +484,26 @@ header {
 
 .about_me__icons {
 }
-
+/* Back to top button */
+#backToTopBtn {
+  display: none;  /* hidden by default */
+  position: fixed;
+  bottom: 40px;
+  right: 30px;
+  z-index: 99;
+  font-size: 24px;
+  background: #333;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  padding: 12px 16px;
+  cursor: pointer;
+  opacity: 0.7;
+  transition: opacity 0.3s ease;
+  }
+  #backToTopBtn:hover {
+    opacity: 1;
+  }
 /* Tablet view */
 /* and (max-width: 768px) */
 @media (min-width: 500px) and (max-width: 1024px) {
@@ -498,7 +517,7 @@ header {
   .hero__image {
     width: 220px;
     /* height: 200px; */
-    float:left;
+    float: left;
     position: relative;
     z-index: 1;
     margin-right: 1rem;
@@ -698,3 +717,4 @@ header {
     /* margin-bottom: 2rem; */
   }
 }
+
